src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/GMBLASERP__Inventory_Movement_Cube__c.object-meta.xml
<CustomObject>
    <label>Inventory Movement Cube</label>
    <nameField>
        <displayFormat>IMC-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Movement Cubes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>