src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/fields/GMBLASERP__Inventory_Balance__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Inventory_Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Balance</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Inventory Movement Cubes</relationshipLabel>
    <relationshipName>Inventory_Movement_Cubes</relationshipName>
    <type>Lookup</type>
</CustomField>