src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/fields/GMBLASERP__Lot__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Inventory Movement Cubes</relationshipLabel>
    <relationshipName>Inventory_Movement_Cubes</relationshipName>
    <type>Lookup</type>
</CustomField>