src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/fields/GMBLASERP__Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Movement_Date__c</fullName>
    <label>Movement Date</label>
    <type>Date</type>
</CustomField>