src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/fields/GMBLASERP__Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Movement_Type__c</fullName>
    <label>Movement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AcctSeedERP__Inbound_Inventory_Movement__c</fullName>
            </value>
            <value>
                <fullName>AcctSeedERP__Manufacturing_Inventory_Movement__c</fullName>
            </value>
            <value>
                <fullName>AcctSeedERP__Outbound_Inventory_Movement__c</fullName>
            </value>
            <value>
                <fullName>AcctSeedERP__Purchase_Order_Inventory_Movement__c</fullName>
            </value>
            <value>
                <fullName>AcctSeedERP__Sales_Order_Inventory_Movement__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>