src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/fields/GMBLASERP__Product__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Movement Cubes</relationshipLabel>
    <relationshipName>Inventory_Movement_Cubes</relationshipName>
    <type>Lookup</type>
</CustomField>