src/Base/main/default/objects/GMBLASERP__Inventory_Movement_Cube__c/listViews/GMBLASERP__All.listView-meta.xml
<ListView>
    <fullName>GMBLASERP__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>